--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -58,7 +58,7 @@
 \photo[circle,noedge,left]{profile.png}
 \name{Gon\c{c}alo N.}{Paiva Amador\vspace{0.1cm}}
 %\position{Software Engineer {\enskip\cdotp\enskip} Lecturer {\enskip\cdotp\enskip} Project Manager}
-\address{\faHome \acvHeaderIconSep Peniche, Portugal %{\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Nationality: Portuguese\\
+\personalinformation{\faHome \acvHeaderIconSep Peniche, Portugal %{\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Nationality: Portuguese\\
 {\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Portuguese {\enskip\cdotp\enskip} \faBirthdayCake \acvHeaderIconSep 27/07/1983
 {\enskip\cdotp\enskip} \faMars \acvHeaderIconSep Male
 {\enskip\cdotp\enskip} \faFemale \faMale \acvHeaderIconSep Single\vspace{0.1cm}}
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Miniclip Recruitment}
-  {Miniclip Portugal\\Av. Prof. Dr. Cavaco Silva 11, 2740-120 Porto Salvo}
+  {Company X Recruitment Team}
+  {Company X \\Company X address}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Software Developer (Server) - Games Industry} 
+\lettertitle{Job Title} 
 % How the letter is opened
 \letteropening{Dear Hiring Manager,} %Mr./Ms./Dr. LastName,}
 % How the letter is closed
