Corrected small typo in Certifications.

--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {SAP HANA Cloud Platform* Essentials} % Certificate designation
+    {Developing Java-Based Apps on SAP Cloud Platform*} % Certificate designation
     {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {online} % Location
     %{Feb. 7, 2017 - March 29, 2017} % Date(s)      
@@ -20,7 +20,7 @@
 	    \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {\href{https://open.sap.com/}{openSAP}} % License number     
         \item {\href{https://open.sap.com/verify/xuhes-rimus-bikon-roper-hicom}{Online Certificate}} %Certificate URL 
-        \item {Valid from March 29, 2017 - Present} % Validity
+        \item {Valid from May 18, 2017 - Present} % Validity
       \end{cvitems}
     }    
 
