Updated Résumé to include skills pie-charts.

--- a/examples/resume/additional_information.tex
+++ b/examples/resume/additional_information.tex
@@ -16,7 +16,7 @@
     {} 
     {} 
     {
-      \vspace{-1cm}
+      \vspace{-.6cm}
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item[] {\hspace{-.4cm} \textbf{Researcher} with 9 international scientific articles published (1 journal and 8 conferences).}
         \item[] {\hspace{-.4cm} \textbf{Keynote speaker} at 8 technical, technological and scientific events.}
