--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,10 +17,11 @@
     {Jan. 2012 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Engineering and design of a novel modular game engine architecture.}
+      %\item {Engineering and design of a novel modular game engine architecture.}
       \item {Implementation and development of novel pathfinders reactive to influence maps.}%a novel pathfinder and of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
-      \item {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
-      \item {Lecturing about achieved results and possible new research trends.}
+      %\item {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
+      %\item {Lecturing about achieved results and possible new research trends.}
+      \item {Conducting research, writing scientific papers, and lecturing about achieved results and possible new research trends.}
 %        \item {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
 %        \item {Engineering and design of modular game engines.}
 %        \item {Implementation and development of innovative motion planning techniques.}
@@ -41,7 +42,8 @@
     {Mar. 2008 - Dec. 2011} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-		\item {Implementation of a game engine to test state management processing, storage and communication techniques.}        
+		%\item {Implementation of a game engine to test state management processing, storage and communication techniques.}        
+		\item {Engineering and design of a novel modular game engine architecture to test state management techniques.}
         \item {Implementation of Grid-based solutions to transform multi-player games into MMOGs.}
         \item {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}
       \end{cvitems}
@@ -65,8 +67,9 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
 		\item {Developed laboratory course material, including practical sheets and tests (available upon request).}
-        \item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory.} 
-        \item {Participated in practical project joint assessment with course supervisor.}					
+        %\item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory.} 
+        %\item {Participated in practical project joint assessment with course supervisor.}
+        \item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory, and practical project joint assessment.}% with course supervisor	.}			
       \end{cvitems}
     }       
     
