--- a/examples/resume/pie_charts/pie_chart_operative_systems.tex
+++ b/examples/resume/pie_charts/pie_chart_operative_systems.tex
@@ -7,24 +7,18 @@
      text=white, 
      border/.style={line width=14mm}]
 \foreach \angle/\col [remember=\angle as \last (initially 0)] in 
-    {360/orange!100!black, 315/orange!90!black, 270/orange!80!black, 225/orange!70!black, 180/orange!60!black, 120/orange!50!black, 60/orange!40!black}{    
+    {360/orange!100!black, 320/orange!40!black, 210/orange!60!black, 140/orange!80!black, 140/orange!80!black}{    
 		\draw[\col, border] (\last:2cm) 
              arc[start angle=\last, end angle=\angle, radius=2cm];
 		\draw[white, line width=0.5mm] (\last:1.3)--++(\last:1.4);
 }
-\node[text width=1.5cm, align=center, font=\sffamily\bfseries\normalsize, draw, circle, minimum width=2.5cm, white, fill=orange!20!black] {Operative Systems (usage)};
-\node[text width=1.3cm, align=center, font=\sffamily\bfseries\footnotesize] at (30:2cm) 
-    {Mint Cinnamon 25\%};
-\node[text width=1.1cm, align=center, font=\sffamily\bfseries\footnotesize] at (90:2cm) {Ubuntu 15\%};
-\node[text width=1.1cm, align=center, font=\sffamily\bfseries\footnotesize] at (148:2cm) 
-    {Android 25\%};
-\node[text width=1.2cm, align=center, font=\sffamily\bfseries\footnotesize] at (202:2cm) 
-    %{MS Windows 3.1.1 to current};
-    {MS Windows 25\%};
-\node[text width=1.2cm, align=center, font=\sffamily\bfseries\footnotesize] at (245:2cm) 
-    %{MS Windows 2003 Server to current};    
-    {MS Windows Server 2\%};    
-\node[text width=1.1cm, align=center, font=\sffamily\bfseries\footnotesize] at (295:2cm) {Kali 5\%};
-\node[text width=1.1cm, align=center, font=\sffamily\bfseries\footnotesize] at (340:2cm) {iOS 3\%};
+\node[text width=1.5cm, align=center, font=\sffamily\bfseries\large, draw, circle, minimum width=2.5cm, white, fill=orange!25!black] {O.S. (usage)};
+\node[text width=6.5cm, align=center, font=\sffamily\bfseries\normalsize] at (85:1.80cm) 
+	{Linux (OpenSuse, \\ Fedora, Ubuntu) 45\% };
+\node[text width=3.0cm, align=center, font=\sffamily\bfseries\normalsize] at (180:2cm) 
+    {Android \\ 20\%};
+\node[text width=6.5cm, align=center, font=\sffamily\bfseries\normalsize] at (270:1.75cm) 
+    {Windows (XP-10, \\ 2000-* Server) 30\%};  
+\node[text width=1.1cm, align=center, font=\sffamily\bfseries\normalsize] at (340:2cm) {iOS 5\%};
 \end{tikzpicture}
 \end{document}
