Added picture option to Résumé.

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -51,6 +51,7 @@
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
+\photo[circle,noedge,left]{profile.png}
 \name{Gon\c{c}alo N.}{Paiva Amador\vspace{0.1cm}}
 %\position{Software Engineer {\enskip\cdotp\enskip} Lecturer {\enskip\cdotp\enskip} Project Manager}
 \personalinformation{\faHome \acvHeaderIconSep Peniche, Portugal %{\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Nationality: Portuguese\\
@@ -78,7 +79,8 @@
 \begin{document}
 
 % Print the header with above personal informations
-\makecvheader
+% Give optional argument to change alignment(C: center, L: left, R: right)
+\makecvheader[L]
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
