Updated Résumé design.

--- a/examples/resume/additional_information.tex
+++ b/examples/resume/additional_information.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsectionspecifiedcolor{rainbowcolor-cyan}{\faInfoCircle \acvHeaderIconSep Additional Information}
+%\cvsectionspecifiedcolor{rainbowcolor-cyan}{\faInfoCircle \acvHeaderIconSep Additional Information}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faInfoCircle \acvHeaderIconSep Additional Information}
 
 
 %-------------------------------------------------------------------------------
