--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsectionspecifiedcolor{rainbowcolor-blue}{\faCertificate \acvHeaderIconSep Certifications}
+%\cvsectionspecifiedcolor{rainbowcolor-blue}{\faCertificate \acvHeaderIconSep Certifications}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faCertificate \acvHeaderIconSep Certifications}
 
 
 %-------------------------------------------------------------------------------
