--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsectionspecifiedcolor{rainbowcolor-green}{\faBriefcase \acvHeaderIconSep Experience}
+%\cvsectionspecifiedcolor{rainbowcolor-green}{\faBriefcase \acvHeaderIconSep Experience}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faBriefcase \acvHeaderIconSep Experience}
 
 
 %-------------------------------------------------------------------------------
