--- a/examples/resume/languages.tex
+++ b/examples/resume/languages.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsectionspecifiedcolor{rainbowcolor-violet}{\faGlobe \acvHeaderIconSep Languages}
+%\cvsectionspecifiedcolor{rainbowcolor-violet}{\faGlobe \acvHeaderIconSep Languages}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faGlobe \acvHeaderIconSep Languages}
 
 
 %-------------------------------------------------------------------------------
