--- a/examples/resume/research_interests.tex
+++ b/examples/resume/research_interests.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsectionspecifiedcolor{rainbowcolor-orange}{\faGears \acvHeaderIconSep Research Interests}
+%\cvsectionspecifiedcolor{rainbowcolor-orange}{\faGears \acvHeaderIconSep Research Interests}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faGears \acvHeaderIconSep Research Interests}
 
 
 %-------------------------------------------------------------------------------
