--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -1,91 +1,94 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsectionspecifiedcolor{rainbowcolor-yellow}{\faBarChart \acvHeaderIconSep Skills}
+%\cvsectionspecifiedcolor{rainbowcolor-yellow}{\faBarChart \acvHeaderIconSep Skills}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faBarChart \acvHeaderIconSep Skills}
+
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 
-\begin{figure}[!htb]
-\centering
-\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_programming.pdf} 
-%~~~~~~~~~~
-%\includegraphics[scale=0.76]{resume/pie_charts/pie_chart_coding.pdf}
-%~~~~~~~~~~
-\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_tools.pdf}
-%~~~~~~~~~~
-\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_operative_systems.pdf}
-%~~~~~~~~~~
-%\includegraphics[scale=0.76]{resume/pie_charts/pie_chart_soft_skills.pdf}
-\end{figure}
+%\begin{figure}[!htb]
+%\centering
+%\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_programming.pdf} 
+%%~~~~~~~~~~
+%%\includegraphics[scale=0.76]{resume/pie_charts/pie_chart_coding.pdf}
+%%~~~~~~~~~~
+%\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_tools.pdf}
+%%~~~~~~~~~~
+%\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_operative_systems.pdf}
+%%~~~~~~~~~~
+%%\includegraphics[scale=0.76]{resume/pie_charts/pie_chart_soft_skills.pdf}
+%\end{figure}
 
-%\begin{cventries}
-%
-%%---------------------------------------------------------
+\begin{cventries}
+
+%---------------------------------------------------------
+  \cventry
+    {Programming/meta Languages \& APIs/Frameworks:} % title
+    {} % 
+    {} % 
+    {} % 
+    { 
+      \begin{cvitems} % Description(s)
+        \item {C/C++, C\#, Java, shell scripting, SQL, CUDA/OpenMP/OpenCL/MPI,OpenGL, HTML/CSS/JavaScript/XML, UML, LaTeX.}
+	  \end{cvitems}
+    }  
+  \vspace{-0.4cm}
+
+%---------------------------------------------------------
+  \cventry
+    {Productivity tools:} % title
+    {} % Organization
+    {} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s) 
+        \item {Git/SVN, Maven, Ant, Gimp, Skype, Google Chrome, Mozilla Firefox, LibreOffice, Blender, Eclipse/Netbeans/VisualStudio 2005-current.}%, and Android Studio.           
+      \end{cvitems}
+    }  
+  \vspace{-0.4cm}  
+    
+%---------------------------------------------------------
 %  \cventry
-%    {Programming/meta Languages \& APIs/Frameworks:} % title
-%    {} % 
-%    {} % 
-%    {} % 
-%    { 
+%    {General Coding/Algorithms:} % title
+%    {} 
+%    {} 
+%    {} 
+%    {      
 %      \begin{cvitems} % Description(s)
-%        \item {C/C++, C\#, Java, shell scripting, SQL, CUDA/OpenMP/OpenCL/MPI,OpenGL, HTML/CSS/JavaScript/XML, UML, LaTeX.}
-%	  \end{cvitems}
-%    }  
-%  \vspace{-0.4cm}
-%
-%%---------------------------------------------------------
-%  \cventry
-%    {Productivity tools:} % title
-%    {} % Organization
-%    {} % Location
-%    {} % Date(s)
-%    {
-%      \begin{cvitems} % Description(s) 
-%        \item {Git/SVN, Maven, Ant, Gimp, Skype, Google Chrome, Mozilla Firefox, LibreOffice, Blender, Eclipse/Netbeans/VisualStudio 2005-current.}%, and Android Studio.           
+%        \item {Game Engines, Motion Planners, Computational Physics (fluids), Parallel/Grid/Cloud Computing, HCI.}        
 %      \end{cvitems}
 %    }  
 %  \vspace{-0.4cm}  
 %    
-%%---------------------------------------------------------
-%%  \cventry
-%%    {General Coding/Algorithms:} % title
-%%    {} 
-%%    {} 
-%%    {} 
-%%    {      
-%%      \begin{cvitems} % Description(s)
-%%        \item {Game Engines, Motion Planners, Computational Physics (fluids), Parallel/Grid/Cloud Computing, HCI.}        
-%%      \end{cvitems}
-%%    }  
-%%  \vspace{-0.4cm}  
-%%    
-%%---------------------------------------------------------
-%%  \cventry
-%%    {Soft skills (x/100\%):} % title
-%%    {} 
-%%    {} 
-%%    {} 
-%%    {
-%%      \begin{cvitems} % Description(s)
-%%        \item {Commun. (25), Team Work \& Collaboration (15), Prob. Solving (20), Critical Observ. (18), Adapt. (12), Conflict Resol. (10).}        
-%%      \end{cvitems}
-%%    }  
-%%  \vspace{-0.4cm} 
-%%    
-%%---------------------------------------------------------
+%---------------------------------------------------------
 %  \cventry
-%    {Operating Systems Usage:} % title
+%    {Soft skills (x/100\%):} % title
 %    {} 
 %    {} 
 %    {} 
 %    {
 %      \begin{cvitems} % Description(s)
-%        \item {MS Windows (2003-2008 server, 7,10), Linux (Ubuntu, Mint Cinnamon, Fedora, and OpenSuse), Android and iOS.}        
+%        \item {Commun. (25), Team Work \& Collaboration (15), Prob. Solving (20), Critical Observ. (18), Adapt. (12), Conflict Resol. (10).}        
 %      \end{cvitems}
 %    }  
+%  \vspace{-0.4cm} 
 %    
-%%---------------------------------------------------------
-%
-%\end{cventries}
+%---------------------------------------------------------
+  \cventry
+    {Operating Systems Usage:} % title
+    {} 
+    {} 
+    {} 
+    {
+      \begin{cvitems} % Description(s)
+        \item {MS Windows (2003-2008 server, 7,10), Linux (Ubuntu, Mint Cinnamon, Fedora, and OpenSuse), Android and iOS.}        
+      \end{cvitems}
+    }  
+  \vspace{0.4cm} 
+    
+%---------------------------------------------------------
+
+\end{cventries}
