--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsectionspecifiedcolor{rainbowcolor-indigo}{\faGraduationCap \acvHeaderIconSep Education}
+%\cvsectionspecifiedcolor{rainbowcolor-indigo}{\faGraduationCap \acvHeaderIconSep Education}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faGraduationCap \acvHeaderIconSep Education}
 
 
 %-------------------------------------------------------------------------------
@@ -11,16 +12,16 @@
 
 %---------------------------------------------------------
   \cventry
-    {\href{https://www.ubi.pt/en/course/849}{PhD in Computer Science and Engineering (?/20 points)}} % Degree
+    {\href{https://www.ubi.pt/en/course/849}{PhD in Computer Science and Engineering (18/20 points)}} % Degree
     {\href{https://www.di.ubi.pt/}{Department of Computer Science and Engineering}, \href{http://www.ubi.pt/}{Universidade da Beira Interior}} % Institution
     {Covilh\~{a}, Portugal} % Location
-    {Jan. 2012 - Present} % Date(s)
+    {Jan. 2012 - July 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Thesis: Influence-based Motion Planning Algorithms for Games}
         %\item {Areas of Study: Artificial Intelligence, Motion Planning, and Game Engines}
-        \item {Advisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
-        \item {\textbf{Availability to start working on April 1 of 2017, requiring a week off for the thesis defense (expectedly May/June)}.}
+        \item {Supervisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+        %\item {\textbf{Availability to start working on April 1 of 2017, requiring a week off for the thesis defense (expectedly May/June)}.}
       \end{cvitems}
     }
 
@@ -34,6 +35,7 @@
       \begin{cvitems} % Description(s) bullet points
         %\item {Final Project at \href{http://www.ubi.pt/}{Instituto de Telecomunica\c{c}~oes}: Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
         \item {Final Project: Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
+		\item {Supervisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
       \end{cvitems}
     }
   
@@ -47,7 +49,7 @@
       \begin{cvitems} % Description(s) bullet points
         \item {Final Thesis: Real-Time 3D Rendering of Water using CUDA (19/20 points)}
         %\item {Area of Study: Natural Phenomena Real-Time Simulation}
-        \item {Advisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+        \item {Supervisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
       \end{cvitems}
     }
 
