"Experience & Skills Update"

--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -140,12 +140,13 @@ My focus is on addressing novel problems/challenges with a tendentiously unbiase
 
 Some of the qualities and credentials I have to offer are:
 \begin{itemize}
-	\item MSc, and PhD \footnote{Waiting for the public defense.} in Computer Science and Engineering.
+	\item PhD in Computer Science and Engineering.
+	%\item MSc in Computer Science and Engineering.
 	\item 8+ years of professional experience, as a scientific presenter, laboratory assistant professor, and project researcher.
 	\item Expertise in several programming languages, more relevantly, Java (J2SE), C/C++, C\#, and JavaScript.
 	\item Knowledge of distributed, parallel, and cloud computational systems, including its communication formats and standards (e.g., XML).
 	\item Team-focused player.	
-	%\item Expertise in several multidisciplinary technologies (Android, Unity, Java Swing).
+	%\item Expertise in several multidisciplinary technologies (Android, Unity, Java Swing, Xamarin).
 	\item Creative and proactive troubleshooter and problem solver.
 \end{itemize}
 
