--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -12,33 +12,48 @@
 
 %---------------------------------------------------------
   \cventry
-    {PhD Researcher for <\href{http://www.fct.pt/index.phtml.en}{Foundation for Science and Technology}>} % Job title
-    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
-    {Covilh\~a, Portugal} % Location
-    {Jan. 2012 - Present} % Date(s)
+    {Software Engineer} % Job title
+    {\href{https://www.reditpro.com/}{Red IT}} % Organization
+    {Lisbon, Portugal} % Location
+    {July 2012 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-      %\item {Engineering and design of a novel modular game engine architecture.}
-      \item {Implementation and development of novel pathfinders reactive to influence maps.}%a novel pathfinder and of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
-      %\item {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
-      %\item {Lecturing about achieved results and possible new research trends.}
-      \item {Conducting research, writing scientific papers, and lecturing about achieved results and possible new research trends.}
-%        \item {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
-%        \item {Engineering and design of modular game engines.}
-%        \item {Implementation and development of innovative motion planning techniques.}
-%        \item {Lecturing about achieved results and possible new research trends.}
-%        \item[] {}
-%        \item[] {\textbf{Notable Accomplishments:}}      
-%        \item {Proposal of a novel modular game engine architecture.}
-%        \item {Proposal of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
-%        \item {Proposal of a novel pathfinder.}
+      \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
+%      \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+      \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+      \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}
       \end{cvitems}
     }  
+
+%%---------------------------------------------------------
+%  \cventry
+%    {PhD Researcher for <\href{http://www.fct.pt/index.phtml.en}{Foundation for Science and Technology}>} % Job title
+%    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
+%    {Covilh\~a, Portugal} % Location
+%    {Jan. 2012 - Present} % Date(s)
+%    {
+%      \begin{cvitems} % Description(s) of tasks/responsibilities
+%      %\item {Engineering and design of a novel modular game engine architecture.}
+%      \item {Implementation and development of novel pathfinders reactive to influence maps.}%a novel pathfinder and of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
+%      %\item {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
+%      %\item {Lecturing about achieved results and possible new research trends.}
+%      \item {Conducting research, writing scientific papers, and lecturing about achieved results and possible new research trends.}
+%%        \item {Conducting research and case studies on leading edge algorithms and technologies. Writing scientific papers.}
+%%        \item {Engineering and design of modular game engines.}
+%%        \item {Implementation and development of innovative motion planning techniques.}
+%%        \item {Lecturing about achieved results and possible new research trends.}
+%%        \item[] {}
+%%        \item[] {\textbf{Notable Accomplishments:}}      
+%%        \item {Proposal of a novel modular game engine architecture.}
+%%        \item {Proposal of two novel motion planning algorithms, that integrate influence maps with pathfinders.}
+%%        \item {Proposal of a novel pathfinder.}
+%      \end{cvitems}
+%    }  
     
 %---------------------------------------------------------
   \cventry
     {Research Associate for <PTDC/EIA/70830/2006, \href{http://www.di.ubi.pt/~agomes/moggy/index.html}{MOGGY - A Browser-Based Massive Multiplayer Online Game Engine Architecture}> Project} % Job title
-    {} % Organization
+    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
     {} % Location
     {Mar. 2008 - Dec. 2011} % Date(s)
     {
@@ -46,7 +61,7 @@
 		%\item {Implementation of a game engine to test state management processing, storage and communication techniques.}        
 		\item {Engineering and design of a novel modular game engine architecture to test state management techniques.}
         \item {Implementation of Grid-based solutions to transform multi-player games into MMOGs.}
-        \item {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}
+        %\item {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}
       \end{cvitems}
     }     
     
@@ -129,7 +144,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses.}
         \item {Integration of dynamic content with a content management system (CMS), assessment and extension of CMSs.}
-		\item {Research, implementation, and testing of novel modern ways to divulge a math department.}
+		%\item {Research, implementation, and testing of novel modern ways to divulge a math department.}
       \end{cvitems}
     }  
      
