--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -32,7 +32,7 @@
     {} % 
     { 
       \begin{cvitems} % Description(s)
-        \item {C/C++, C\#, Java, shell scripting, SQL, CUDA/OpenMP/OpenCL/MPI,OpenGL, HTML/CSS/JavaScript/XML, UML, LaTeX.}
+        \item {C/C++, C\#, Java, shell scripting, SQL, jQuery, Ajax, AngularJS, Node.js, CUDA/OpenMP/OpenCL/MPI,OpenGL, HTML/CSS/JavaScript/XML/JSON, UML, LaTeX.}
 	  \end{cvitems}
     }  
   \vspace{-0.4cm}
@@ -45,7 +45,7 @@
     {} % Date(s)
     {
       \begin{cvitems} % Description(s) 
-        \item {Git/SVN, Maven, Ant, Gimp, Skype, Google Chrome, Mozilla Firefox, LibreOffice, Blender, Eclipse/Netbeans/VisualStudio 2005-current.}%, and Android Studio.           
+        \item {Git/SVN, Maven, Ant, Team Foundation Server, Gimp, Skype, Google Chrome, Mozilla Firefox, LibreOffice, Blender, Eclipse/Netbeans/VisualStudio 2005-current, SQL server 2014-2016.}%, and Android Studio.           
       \end{cvitems}
     }  
   \vspace{-0.4cm}  
