"Professional experience start date (2017) was wrong! Corrected to correct value (2017).

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -13,9 +13,9 @@
 %---------------------------------------------------------
   \cventry
     {Software Engineer} % Job title
-    {\href{https://www.reditpro.com/}{Red IT}} % Organization
+    {\href{https://www.reditpro.com/}{Red IT} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {July 2012 - Present} % Date(s)
+    {July 2017 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
@@ -53,7 +53,7 @@
 %---------------------------------------------------------
   \cventry
     {Research Associate for <PTDC/EIA/70830/2006, \href{http://www.di.ubi.pt/~agomes/moggy/index.html}{MOGGY - A Browser-Based Massive Multiplayer Online Game Engine Architecture}> Project} % Job title
-    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory}} % Organization
+    {\href{http://www.it.ubi.pt/medialab}{Instituto de Telecomunica\c{c}\~{o}es and Graphics \& Media Laboratory} \textbf{(Academic)}} % Organization
     {} % Location
     {Mar. 2008 - Dec. 2011} % Date(s)
     {
@@ -77,7 +77,7 @@
 %    {Lab Instructor for the 
 %        \href{http://www.di.ubi.pt/~agomes/tjv/}
 %        {Video Games Technologies} course} % Job title
-    {\href{http://www.ubi.pt}{Universidade da Beira Interior}} % Organization
+    {\href{http://www.ubi.pt}{Universidade da Beira Interior} \textbf{(Academic)}} % Organization
     {Covilh\~a, Portugal} % Location
     {\linebreak Jan. 2012 - July 2016 \linebreak Jan. 2012 - July 2012} % Date(s)
     {
